--- a/core/res/res/values-fa-rIR/spark_strings.xml
+++ b/core/res/res/values-fa-rIR/spark_strings.xml
@@ -62,7 +62,7 @@
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
     <!-- App lock -->
-    <string name="unlock_application">Unlock <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
+    <string name="unlock_application">بازگشایی <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
     <!-- Face unlock -->
     <string name="face_unlock_disabled_idle">بازگشایی قفل با چهره به دلیل عدم حرکت، غیرفعال شد</string>
 </resources>
