--- a/core/res/res/values-pl-rPL/spark_strings.xml
+++ b/core/res/res/values-pl-rPL/spark_strings.xml
@@ -8,9 +8,9 @@
     <string name="volume_dialog_ringer_guidance_normal">Połączenia i powiadomienia użyją dzwonka</string>
     <!-- Advanced reboot -->
     <string name="reboot_to_recovery_title">Recovery</string>
-    <string name="reboot_to_recovery_message">Rebooting to recovery</string>
+    <string name="reboot_to_recovery_message">Uruchamiam w trybie recovery</string>
     <string name="reboot_to_bootloader_title">Bootloader</string>
-    <string name="reboot_to_bootloader_message">Rebooting to bootloader</string>
+    <string name="reboot_to_bootloader_message">Uruchamiam w trybie bootloader</string>
     <string name="reboot_title">Uruchom ponownie</string>
     <string name="reboot_message">Ponowne uruchamianie</string>
     <!-- Button that copies the url to the log of a crashed application -->
@@ -18,8 +18,8 @@
     <string name="url_copy_success">URL skopiowany pomyślnie</string>
     <string name="url_copy_failed">An error occured while uploading the log to hastebin</string>
     <!-- SystemUI Restart -->
-    <string name="systemui_restart_title">SystemUI restart required</string>
-    <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
+    <string name="systemui_restart_title">Wymagany restart SystemUI</string>
+    <string name="systemui_restart_message">Aby wszystkie zmiany zostały wprowadzone, wymagany jest restart SystemUI. Zrestartować SystemUI teraz?</string>
     <!-- Pocket Lock -->
     <string name="pocket_lock_message_long_press">Naciśnij i przytrzymaj przycisk zasilania, aby odblokować</string>
     <string name="pocket_view_title">Tryb kieszeniowy jest włączony</string>
@@ -29,36 +29,36 @@
     <string name="pocket_view_top_tag_number1">1.\u0020</string>
     <string name="pocket_view_top_tag_number2">2.\u0020</string>
     <!-- LiveDisplay strings -->
-    <string name="live_display_auto">Automatic</string>
-    <string name="live_display_auto_summary">Automatically adjust color temperature of screen after sunset and sunrise</string>
+    <string name="live_display_auto">Automatyczny</string>
+    <string name="live_display_auto_summary">Automatycznie dostosuj temperaturę kolorów ekranu po zachodu słońca i wschodu słońca</string>
     <string name="live_display_off">Wyłączone</string>
-    <string name="live_display_off_summary">Disable all adjustments</string>
-    <string name="live_display_day">Day</string>
-    <string name="live_display_day_summary">Use day settings only</string>
-    <string name="live_display_night">Night</string>
-    <string name="live_display_night_summary">Use night settings only</string>
-    <string name="live_display_outdoor">Outdoor (bright sun)</string>
-    <string name="live_display_outdoor_summary">Use outdoor settings only</string>
-    <string name="live_display_hint">LiveDisplay can help reduce eyestrain and help you sleep at night. Click here to try it out!</string>
-    <string name="accessibility_quick_settings_live_display_off">LiveDisplay off.</string>
-    <string name="accessibility_quick_settings_live_display_auto">LiveDisplay: auto mode.</string>
-    <string name="accessibility_quick_settings_live_display_day">LiveDisplay: day mode.</string>
-    <string name="accessibility_quick_settings_live_display_night">LiveDisplay: night mode.</string>
-    <string name="accessibility_quick_settings_live_display_outdoor">LiveDisplay: outdoor mode.</string>
-    <string name="accessibility_quick_settings_live_display_changed_off">LiveDisplay turned off.</string>
-    <string name="accessibility_quick_settings_live_display_changed_auto">LiveDisplay changed to auto mode.</string>
-    <string name="accessibility_quick_settings_live_display_changed_day">LiveDisplay changed to day mode.</string>
-    <string name="accessibility_quick_settings_live_display_changed_night">LiveDisplay changed to night mode.</string>
-    <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveDisplay changed to outdoor mode.</string>
+    <string name="live_display_off_summary">Wyłącz wszystkie korekty</string>
+    <string name="live_display_day">Dzień</string>
+    <string name="live_display_day_summary">Użyj tylko ustawień dziennych</string>
+    <string name="live_display_night">Noc</string>
+    <string name="live_display_night_summary">Używaj tylko ustawień nocnych</string>
+    <string name="live_display_outdoor">Zewnętrzne (jasne słońce)</string>
+    <string name="live_display_outdoor_summary">Używaj tylko ustawień na zewnątrz</string>
+    <string name="live_display_hint">LiveDisplay może zredukować zmęczenie oczu oraz może pomóc zasnąć w nocy. Kliknij aby wypróbować!</string>
+    <string name="accessibility_quick_settings_live_display_off">LiveDisplay wyłączony.</string>
+    <string name="accessibility_quick_settings_live_display_auto">LiveDisplay: tryb automatyczny.</string>
+    <string name="accessibility_quick_settings_live_display_day">LiveDisplay: tryb dzienny.</string>
+    <string name="accessibility_quick_settings_live_display_night">LiveDisplay: tryb nocny.</string>
+    <string name="accessibility_quick_settings_live_display_outdoor">LiveDisplay: tryb na zewnątrz.</string>
+    <string name="accessibility_quick_settings_live_display_changed_off">Wyłączono LiveDisplay.</string>
+    <string name="accessibility_quick_settings_live_display_changed_auto">LiveDisplay zmieniony na tryb automatyczny.</string>
+    <string name="accessibility_quick_settings_live_display_changed_day">LiveDisplay zmieniony na tryb dzienny.</string>
+    <string name="accessibility_quick_settings_live_display_changed_night">LiveDisplay zmieniony na tryb nocny.</string>
+    <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveDisplay zmieniony na tryb na zewnątrz.</string>
     <!-- Vendor mismatch fingerprint warning [CHAR LIMIT=NONE] -->
     <string name="system_error_vendorprint">Twój vendor nie jest zgodny z systemem. Zainstaluj vendor <xliff:g id="string">%s</xliff:g> który jest zgodny z Twoim urządzeniem</string>
     <!-- Settings Restart -->
-    <string name="settings_restart_title">Settings restart required</string>
+    <string name="settings_restart_title">Wymagany restart ustawień</string>
     <string name="settings_restart_message">For all changes to take effect, a Settings restart is required. Restart Settings now?</string>
     <!-- Aerr strings -->
-    <string name="aerr_disable">Disable app</string>
+    <string name="aerr_disable">Wyłącz aplikację</string>
     <!-- Button that opens the screen with details of an application error -->
-    <string name="aerr_show_details">Show details</string>
+    <string name="aerr_show_details">Pokaż szczegóły</string>
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
     <!-- App lock -->
