--- a/packages/SystemUI/res/values-pl-rPL/spark_strings.xml
+++ b/packages/SystemUI/res/values-pl-rPL/spark_strings.xml
@@ -19,30 +19,30 @@
     <!-- Label for notification action to delete a screen recording file [CHAR LIMIT=35] -->
     <string name="screenrecord_delete_label">Usuń</string>
     <!-- A toast message shown after successfully deleting a screen recording [CHAR LIMIT=NONE] -->
-    <string name="screenrecord_delete_description">Screen recording deleted</string>
+    <string name="screenrecord_delete_description">Nagrywanie ekranu usunięte</string>
     <!-- Statusbar tuner -->
     <string name="statusbar_items_title">Ikona paska stanu</string>
     <!-- Name of the VPN status bar icon. -->
     <string name="status_bar_vpn">VPN</string>
     <!-- Sb Data Saver icon -->
-    <string name="status_bar_data_saver">Data saver</string>
+    <string name="status_bar_data_saver">Oszczędzanie danych</string>
     <!-- Sb Call Strength icon -->
-    <string name="status_bar_call_strength">Call strength</string>
+    <string name="status_bar_call_strength">Siła połączenia</string>
     <!-- Alert slider extras -->
-    <string name="volume_ringer_priority_only">Priority</string>
-    <string name="volume_ringer_alarms_only">Alarms</string>
-    <string name="volume_ringer_dnd">DnD</string>
+    <string name="volume_ringer_priority_only">Priorytet</string>
+    <string name="volume_ringer_alarms_only">Alarmy</string>
+    <string name="volume_ringer_dnd">Nie przeszkadzać</string>
     <string name="tristate_flashlight">Latarka</string>
-    <string name="tristate_flashlight_on">Torch on</string>
-    <string name="tristate_flashlight_off">Torch off</string>
-    <string name="tristate_flashlight_blink">Torch blink</string>
-    <string name="tristate_brightness_bright">Max-brightness</string>
-    <string name="tristate_brightness_dark">Min-brightness</string>
-    <string name="tristate_brightness_auto">Auto-brightness</string>
-    <string name="tristate_rotation_auto">Auto-rotate</string>
-    <string name="tristate_rotation_0">Portrait</string>
-    <string name="tristate_rotation_90">Landscape (90°)</string>
-    <string name="tristate_rotation_270">Landscape (270°)</string>
+    <string name="tristate_flashlight_on">Latarka włączona</string>
+    <string name="tristate_flashlight_off">Latarka wyłączona</string>
+    <string name="tristate_flashlight_blink">Miganie latarki</string>
+    <string name="tristate_brightness_bright">Maksymalna jasność</string>
+    <string name="tristate_brightness_dark">Minimalna jasność</string>
+    <string name="tristate_brightness_auto">Automatyczna jasność</string>
+    <string name="tristate_rotation_auto">Automatyczny obrót</string>
+    <string name="tristate_rotation_0">Portret</string>
+    <string name="tristate_rotation_90">Krajobraz (90°)</string>
+    <string name="tristate_rotation_270">Krajobraz (270°)</string>
     <!-- Advanced Reboot -->
     <string name="global_action_restart_advanced">Zaawansowane</string>
     <string name="global_action_restart_recovery">Recovery</string>
@@ -76,12 +76,12 @@
     <string name="quick_settings_aod_label">Tryb Always on display</string>
     <string name="quick_settings_aod_on_charge_label">Tryb Always on display przy ładowaniu</string>
     <string name="quick_settings_aod_off_label">Tryb Always on display wył</string>
-    <string name="quick_settings_aod_off_powersave_label">AOD off\nBattery saver</string>
+    <string name="quick_settings_aod_off_powersave_label">AOD wyłączony\nOszczędzanie baterii</string>
     <!-- PowerShare QS tile -->
-    <string name="quick_settings_powershare_label">Wireless PowerShare</string>
-    <string name="quick_settings_powershare_off_powersave_label">Wireless PowerShare off\nBattery saver</string>
-    <string name="quick_settings_powershare_off_low_battery_label">Wireless PowerShare off\nBattery too low</string>
-    <string name="quick_settings_powershare_enabled_label">Wireless PowerShare is enabled</string>
+    <string name="quick_settings_powershare_label">Ładowanie zwrotne PowerShare</string>
+    <string name="quick_settings_powershare_off_powersave_label">Ładowanie zwrotne PowerShare wyłączone\nOszczędzanie energii</string>
+    <string name="quick_settings_powershare_off_low_battery_label">Wireless PowerShare wyłączone\nNiski poziom baterii</string>
+    <string name="quick_settings_powershare_enabled_label">Ładowanie zwrotne PowerShare jest włączone</string>
     <!-- Caffeine tile -->
     <string name="quick_settings_caffeine_label">Kofeina</string>
     <string name="accessibility_quick_settings_caffeine_off">Kofeina wył</string>
@@ -104,7 +104,7 @@
     <string name="quick_settings_sound_label">Dźwięk</string>
     <string name="quick_settings_sound_ring">Dzwonek</string>
     <string name="quick_settings_sound_vibrate">Wibracje</string>
-    <string name="quick_settings_sound_mute">Mute</string>
+    <string name="quick_settings_sound_mute">Wycisz</string>
     <!-- Heads Up QS Tile -->
     <string name="quick_settings_heads_up_label">Wyskakujące powiadomienia \"Heads up\"</string>
     <string name="accessibility_quick_settings_heads_up_off">Wyłącz wyskakujące powiadomienia.</string>
@@ -130,19 +130,19 @@
     <!-- FPS view text placeholder -->
     <string name="fps_text_placeholder"><xliff:g id="fps" example="90">%1$d</xliff:g></string>
     <!-- Navigation bar dpad -->
-    <string name="accessibility_dpad_left">Cursor left</string>
-    <string name="accessibility_dpad_right">Cursor right</string>
+    <string name="accessibility_dpad_left">Kursor w lewo</string>
+    <string name="accessibility_dpad_right">Kursor w prawo</string>
     <!-- Reader mode QS tile -->
-    <string name="quick_settings_reading_mode">Reading mode</string>
-    <string name="accessibility_quick_settings_reading_mode_on">Reading mode on.</string>
-    <string name="accessibility_quick_settings_reading_mode_off">Reading mode off.</string>
-    <string name="accessibility_quick_settings_reading_mode_changed_on">Reading mode turned on.</string>
-    <string name="accessibility_quick_settings_reading_mode_changed_off">Reading mode turned off.</string>
+    <string name="quick_settings_reading_mode">Tryb czytania</string>
+    <string name="accessibility_quick_settings_reading_mode_on">Tryb czytania wł.</string>
+    <string name="accessibility_quick_settings_reading_mode_off">Tryb czytania wył.</string>
+    <string name="accessibility_quick_settings_reading_mode_changed_on">Włączono tryb czytania.</string>
+    <string name="accessibility_quick_settings_reading_mode_changed_off">Wyłączono tryb czytania.</string>
     <!-- Kill foreground app -->
     <string name="task_helper_app_killed">%1$s wymuszono zatrzymanie</string>
     <string name="empty_app_killed">Aplikacja</string>
     <!-- Anti flicker QS tile -->
-    <string name="quick_settings_anti_flicker">Anti flicker</string>
+    <string name="quick_settings_anti_flicker">Anty migotanie</string>
     <!-- Advanced nav gestures -->
     <string name="app_picker_dialog_title">Wybierz aplikację</string>
     <string name="active_edge_app_select_title">Wybierz aplikację</string>
@@ -166,18 +166,18 @@
     <!-- CPUInfo tile -->
     <string name="quick_settings_cpuinfo_label">Informacje o CPU</string>
     <!-- SoundSearch Tile -->
-    <string name="quick_settings_sound_search">Sound search</string>
-    <string name="quick_settings_sound_search_no_app">Sorry, but this doesn\'t work if you don\'t have a Sound search app.</string>
+    <string name="quick_settings_sound_search">Wyszukiwanie dźwięku</string>
+    <string name="quick_settings_sound_search_no_app">Przepraszamy, ale to nie działa, jeśli nie masz aplikacji do wyszukiwania dźwięku.</string>
     <!-- Refresh Rate Tile -->
-    <string name="refresh_rate_tile_label">Refresh rate</string>
+    <string name="refresh_rate_tile_label">Częstotliwość odświeżania</string>
     <string name="refresh_rate_auto_mode_placeholder">        Auto (<xliff:g id="min_refresh_rate" example="60">%1$d</xliff:g> - <xliff:g id="max_refresh_rate" example="60">%2$d</xliff:g> Hz)
     </string>
     <string name="refresh_rate_forced_mode_placeholder"><xliff:g id="refresh_rate" example="60">%1$d</xliff:g> Hz</string>
     <!-- Google Lens Screenshot string -->
-    <string name="lensss">Lens</string>
+    <string name="lensss">Soczewka</string>
     <!-- Smart Pixels QS Tile -->
-    <string name="quick_settings_smart_pixels">Smart Pixels</string>
-    <string name="quick_settings_smart_pixels_on_power_save">Auto-enabled Smart Pixels</string>
+    <string name="quick_settings_smart_pixels">Inteligentne piksele</string>
+    <string name="quick_settings_smart_pixels_on_power_save">Automatycznie włączone inteligentne piksele</string>
     <!-- Indication on the keyguard that is shown when the device is charging with a dash charger. Should match keyguard_plugged_in_dash_charging [CHAR LIMIT=40]-->
     <string name="keyguard_indication_dash_charging_time"><xliff:g id="percentage">%2$s</xliff:g> • Dash charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> until full)</string>
     <string name="keyguard_plugged_in_dash_charging"><xliff:g id="percentage">%s</xliff:g> • Dash charging</string>
@@ -188,50 +188,50 @@
     <string name="keyguard_indication_vooc_charging_time"><xliff:g id="percentage">%2$s</xliff:g> • VOOC Charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> until full)</string>
     <string name="keyguard_plugged_in_vooc_charging"><xliff:g id="percentage">%s</xliff:g> • VOOC Charging</string>
     <!-- Indication on the keyguard that is shown when the device is charging with a turbo power charger. Should match keyguard_plugged_in_turbo_charging [CHAR LIMIT=40]-->
-    <string name="keyguard_indication_turbo_power_time"><xliff:g id="percentage">%2$s</xliff:g> • Turbo Charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> until full)</string>
+    <string name="keyguard_indication_turbo_power_time"><xliff:g id="percentage">%2$s</xliff:g> • Turbo ładowanie (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> do pełna)</string>
     <string name="keyguard_plugged_in_turbo_charging"><xliff:g id="percentage">%s</xliff:g> • Turbo Charging</string>
     <!-- Indication on the keyguard that is shown when the device is charging with an oem fast power charger. Should match keyguard_plugged_in_turbo_charging [CHAR LIMIT=40]-->
     <string name="keyguard_indication_oem_power_time"><xliff:g id="percentage">%2$s</xliff:g> • Fast Charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> until full)</string>
-    <string name="keyguard_plugged_in_oem_charging"><xliff:g id="percentage">%s</xliff:g> • Fast Charging</string>
+    <string name="keyguard_plugged_in_oem_charging"><xliff:g id="percentage">%s</xliff:g> • Szybkie ładowanie</string>
     <!-- Screen record -->
-    <string name="screenrecord_stopdot_label">Show stop dot</string>
-    <string name="screenrecord_stopdot_summary">Longpress to move it</string>
-    <string name="screenrecord_lowquality_label">Lower quality</string>
-    <string name="screenrecord_lowquality_summary">For smaller file size</string>
-    <string name="screenrecord_longer_timeout_switch_label">Bigger file size limit</string>
-    <string name="screenrecord_longer_timeout_switch_summary">Limit recording size to 15 GB</string>
-    <string name="screenrecord_skip_time_label">Skip timer</string>
-    <string name="screenrecord_skip_time_summary">Remove 3 second wait</string>
-    <string name="screenrecord_hevc_switch_label">Enable HEVC</string>
+    <string name="screenrecord_stopdot_label">Pokaż przycisk do zatrzymania nagrywania</string>
+    <string name="screenrecord_stopdot_summary">Przytrzymaj aby przesunąć</string>
+    <string name="screenrecord_lowquality_label">Niska jakość</string>
+    <string name="screenrecord_lowquality_summary">Dla mniejszego rozmiaru pliku</string>
+    <string name="screenrecord_longer_timeout_switch_label">Większy limit rozmiaru pliku</string>
+    <string name="screenrecord_longer_timeout_switch_summary">Ogranicz rozmiar nagrywania do 15 GB</string>
+    <string name="screenrecord_skip_time_label">Pomiń timer</string>
+    <string name="screenrecord_skip_time_summary">Usuń 3 sekundy oczekiwania</string>
+    <string name="screenrecord_hevc_switch_label">Włącz HEVC</string>
     <!-- QS InternetDialog: Summary for how many devices are connected to the hotspot -->
     <plurals name="quick_settings_internet_hotspot_summary_num_devices">
-        <item quantity="one">%d device connected</item>
+        <item quantity="one">%d urządzenie podłączone</item>
         <item quantity="few">%d devices connected</item>
         <item quantity="many">%d devices connected</item>
         <item quantity="other">%d devices connected</item>
     </plurals>
     <!-- Data usage panel -->
-    <string name="total_internet_usage">Total internet usage (Since boot)</string>
-    <string name="cellular_usage">Mobile data usage</string>
-    <string name="wifi_usage">Wifi data usage</string>
+    <string name="total_internet_usage">Całkowite wykorzystanie Internetu (Od włączenia)</string>
+    <string name="cellular_usage">Użycie danych mobilnych</string>
+    <string name="wifi_usage">Użycie danych Wi-Fi</string>
     <!-- Screen pinning dialog description. (for devices without navbar) -->
-    <string name="screen_pinning_description_no_navbar">This keeps it in view until you unpin. Touch &amp; hold Back to unpin.</string>
+    <string name="screen_pinning_description_no_navbar">Pozostawia to widok dopóki nie odepniesz. Dotknij &amp; przytrzymaj Wstecz, aby odpiąć.</string>
     <!-- Notify use that they are in Lock-to-app (for devices without navbar)-->
     <string name="screen_pinning_toast_no_navbar">To unpin this screen, touch &amp; hold Back button</string>
     <!-- Screen pinning dialog description. (for devices without navbar and with gestures on fingerprint sensor) -->
     <string name="screen_pinning_description_no_navbar_fpsensor">This keeps it in view until you unpin. Touch &amp; hold fingerprint sensor to unpin.</string>
     <!-- Notify use that they are in Lock-to-app (for devices without navbar and with gestures on fingerprint sensor)-->
-    <string name="screen_pinning_toast_no_navbar_fpsensor">To unpin this screen, touch &amp; hold fingerprint sensor</string>
+    <string name="screen_pinning_toast_no_navbar_fpsensor">Aby odpiąć ten ekran, dotknij i przytrzymaj przycisk czytnika linii papilarnych</string>
     <!-- Face Unlock -->
-    <string name="face_unlock_recognizing">Recognizing face...</string>
+    <string name="face_unlock_recognizing">Rozpoznanie twarzy...</string>
     <!-- Bluetooth dialog -->
-    <string name="turn_on_bluetooth">Use Bluetooth</string>
-    <string name="bluetooth_is_off">Bluetooth is off</string>
-    <string name="tap_a_device_to_connect">Tap a device to connect</string>
-    <string name="photos_not_allowed">This app isnt supported</string>
+    <string name="turn_on_bluetooth">Użyj Bluetooth</string>
+    <string name="bluetooth_is_off">Bluetooth jest wyłączony</string>
+    <string name="tap_a_device_to_connect">Dotknij urządzenia, aby połączyć</string>
+    <string name="photos_not_allowed">Ta aplikacja nie jest obsługiwana</string>
     <!-- Preferred network tile -->
-    <string name="quick_settings_preferred_network_label">Preferred network</string>
+    <string name="quick_settings_preferred_network_label">Preferowana sieć</string>
     <string name="quick_settings_preferred_network_lte">4g / LTE</string>
     <string name="quick_settings_preferred_network_nr">5g / NR</string>
-    <string name="quick_settings_preferred_network_unsupported">Unsupported</string>
+    <string name="quick_settings_preferred_network_unsupported">Nieobsługiwane</string>
 </resources>
