--- a/packages/SystemUI/res/values-night/spark_colors.xml
+++ b/packages/SystemUI/res/values-night/spark_colors.xml
@@ -10,4 +10,5 @@
      <color name="data_usage_panel_color">@*android:color/system_neutral1_800</color>
 
      <color name="surface_aqua">@color/surface_aqua_dark</color>
+     <color name="qs_white_bg">@android:color/system_neutral1_0</color>
 </resources>
