--- a/packages/SystemUI/res/values/spark_colors.xml
+++ b/packages/SystemUI/res/values/spark_colors.xml
@@ -15,4 +15,5 @@
     <color name="data_usage_panel_color">@*android:color/system_neutral1_100</color>
 
     <color name="surface_aqua">@color/surface_aqua_light</color>
+    <color name="qs_white_bg">@android:color/system_neutral1_0</color>
 </resources>
