--- a/core/res/res/values/spark_config.xml
+++ b/core/res/res/values/spark_config.xml
@@ -284,4 +284,10 @@
     <!-- Smart cutoff -->
     <integer name="config_smartCutoffTemperature">42</integer>
     <integer name="config_smartCutoffResumeTemperature">38</integer>
+
+    <!-- Fingerprint from a certified device against current platform SPL level -->
+    <string name="config_certifiedFingerprint" translatable="false"></string>
+
+    <!-- Fingerprint from stock ROM -->
+    <string name="config_stockFingerprint" translatable="false"></string>
 </resources>
