--- a/core/res/res/values/spark_symbols.xml
+++ b/core/res/res/values/spark_symbols.xml
@@ -256,4 +256,10 @@
     <java-symbol type="dimen" name="status_bar_padding_start" />
     <java-symbol type="dimen" name="status_bar_padding_end" />
     <java-symbol type="dimen" name="status_bar_padding_top" />
+
+    <!-- Fingerprint from a certified device against current platform SPL level -->
+    <java-symbol type="string" name="config_certifiedFingerprint" />
+
+    <!-- Fingerprint from stock ROM -->
+    <java-symbol type="string" name="config_stockFingerprint" />
 </resources>
