--- a/core/res/res/values-ja-rJP/spark_strings.xml
+++ b/core/res/res/values-ja-rJP/spark_strings.xml
@@ -62,7 +62,7 @@
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
     <!-- App lock -->
-    <string name="unlock_application">Unlock <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
+    <string name="unlock_application"><xliff:g id="label" example="Telegram">%1$s</xliff:g>をロック解除</string>
     <!-- Face unlock -->
-    <string name="face_unlock_disabled_idle">Face unlock disabled due to inactivity</string>
+    <string name="face_unlock_disabled_idle">顔認証によるロック解除は無効です</string>
 </resources>
