--- a/core/res/res/values-pl-rPL/spark_strings.xml
+++ b/core/res/res/values-pl-rPL/spark_strings.xml
@@ -16,7 +16,7 @@
     <!-- Button that copies the url to the log of a crashed application -->
     <string name="aerr_copy">Skopiuj log URL awarii</string>
     <string name="url_copy_success">URL skopiowany pomyślnie</string>
-    <string name="url_copy_failed">An error occured while uploading the log to hastebin</string>
+    <string name="url_copy_failed">Wystąpił błąd podczas przesyłania logu do hastebin</string>
     <!-- SystemUI Restart -->
     <string name="systemui_restart_title">Wymagany restart SystemUI</string>
     <string name="systemui_restart_message">Aby wszystkie zmiany zostały wprowadzone, wymagany jest restart SystemUI. Zrestartować SystemUI teraz?</string>
@@ -54,7 +54,7 @@
     <string name="system_error_vendorprint">Twój vendor nie jest zgodny z systemem. Zainstaluj vendor <xliff:g id="string">%s</xliff:g> który jest zgodny z Twoim urządzeniem</string>
     <!-- Settings Restart -->
     <string name="settings_restart_title">Wymagany restart ustawień</string>
-    <string name="settings_restart_message">For all changes to take effect, a Settings restart is required. Restart Settings now?</string>
+    <string name="settings_restart_message">Aby wszystkie zmiany zostały wprowadzone, wymagany jest restart SystemUI. Zrestartować SystemUI teraz?</string>
     <!-- Aerr strings -->
     <string name="aerr_disable">Wyłącz aplikację</string>
     <!-- Button that opens the screen with details of an application error -->
@@ -64,5 +64,5 @@
     <!-- App lock -->
     <string name="unlock_application">Unlock <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
     <!-- Face unlock -->
-    <string name="face_unlock_disabled_idle">Face unlock disabled due to inactivity</string>
+    <string name="face_unlock_disabled_idle">Rozpoznawanie twarzy wyłączone z powodu braku aktywności</string>
 </resources>
