--- a/core/res/res/values-ro-rRO/spark_strings.xml
+++ b/core/res/res/values-ro-rRO/spark_strings.xml
@@ -62,7 +62,7 @@
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
     <!-- App lock -->
-    <string name="unlock_application">Unlock <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
+    <string name="unlock_application">Deblocare <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
     <!-- Face unlock -->
-    <string name="face_unlock_disabled_idle">Face unlock disabled due to inactivity</string>
+    <string name="face_unlock_disabled_idle">Deblocarea facială a fost dezactivată din cauza inactivității</string>
 </resources>
