--- a/packages/SystemUI/res/values-es-rES/spark_strings.xml
+++ b/packages/SystemUI/res/values-es-rES/spark_strings.xml
@@ -24,6 +24,7 @@
     <string name="statusbar_items_title">Iconos de barra de estado</string>
     <!-- Name of the VPN status bar icon. -->
     <string name="status_bar_vpn">VPN</string>
+    <string name="status_bar_firewall">Cortafuegos</string>
     <!-- Sb Data Saver icon -->
     <string name="status_bar_data_saver">Ahorro de datos</string>
     <!-- Sb Call Strength icon -->
@@ -232,4 +233,18 @@
     <string name="quick_settings_preferred_network_lte">4G / LTE</string>
     <string name="quick_settings_preferred_network_nr">5G / NR</string>
     <string name="quick_settings_preferred_network_unsupported">No admitido</string>
+    <!-- Screenshot Tile -->
+    <string name="screenshot_long_press">Pulsación larga - región seleccionada</string>
+    <!-- Spark QS Tiles -->
+    <string name="quick_settings_spark_boost_mode_label">Boost del Sistema</string>
+    <string name="quick_settings_spark_services_unavailable">Gestor de sistema desactivado</string>
+    <string name="quick_settings_spark_boost_mode_enabled">Boost Activo</string>
+    <string name="quick_settings_spark_boost_mode_disabled">Boost inactivo</string>
+    <string name="quick_settings_spark_idle_mode_label">Gestor Agresivo de inactividad</string>
+    <string name="quick_settings_spark_idle_mode_enabled">Reposo agresivo activado</string>
+    <string name="quick_settings_spark_idle_mode_disabled">Reposo agresivo desactivado</string>
+    <!-- Data usage info in QS footer -->
+    <string name="usage_data">usado hoy</string>
+    <string name="usage_data_default_suffix">Datos</string>
+    <string name="usage_wifi_default_suffix">Wi-Fi</string>
 </resources>
