--- a/packages/SystemUI/res/values-it-rIT/spark_strings.xml
+++ b/packages/SystemUI/res/values-it-rIT/spark_strings.xml
@@ -24,6 +24,7 @@
     <string name="statusbar_items_title">Icona della barra di stato</string>
     <!-- Name of the VPN status bar icon. -->
     <string name="status_bar_vpn">VPN</string>
+    <string name="status_bar_firewall">Firewall</string>
     <!-- Sb Data Saver icon -->
     <string name="status_bar_data_saver">Risparmio dati</string>
     <!-- Sb Call Strength icon -->
@@ -116,7 +117,7 @@
     <string name="quick_settings_reboot_label">Riavvia</string>
     <string name="quick_settings_reboot_recovery_label">Recovery</string>
     <!-- Volume panel QS tile -->
-    <string name="quick_settings_volume_panel_label">Pannelo del volume</string>
+    <string name="quick_settings_volume_panel_label">Pannello del volume</string>
     <!-- DataSwitch Tile -->
     <string name="qs_data_switch_label">Cambia SIM dati</string>
     <string name="qs_data_switch_toast_0">Attualmente non è inserita nessuna SIM</string>
@@ -232,4 +233,18 @@
     <string name="quick_settings_preferred_network_lte">4g / LTE</string>
     <string name="quick_settings_preferred_network_nr">5g / NR</string>
     <string name="quick_settings_preferred_network_unsupported">Non supportato</string>
+    <!-- Screenshot Tile -->
+    <string name="screenshot_long_press">Long press - selected region</string>
+    <!-- Spark QS Tiles -->
+    <string name="quick_settings_spark_boost_mode_label">System Boost</string>
+    <string name="quick_settings_spark_services_unavailable">System Manager Disabled</string>
+    <string name="quick_settings_spark_boost_mode_enabled">Boost Active</string>
+    <string name="quick_settings_spark_boost_mode_disabled">Boost Inactive</string>
+    <string name="quick_settings_spark_idle_mode_label">Aggressive Idle Manager</string>
+    <string name="quick_settings_spark_idle_mode_enabled">Agrressive Idle Active</string>
+    <string name="quick_settings_spark_idle_mode_disabled">Agrressive Idle Inactive</string>
+    <!-- Data usage info in QS footer -->
+    <string name="usage_data">used today</string>
+    <string name="usage_data_default_suffix">Data</string>
+    <string name="usage_wifi_default_suffix">Wi-Fi</string>
 </resources>
