--- a/packages/SystemUI/res/values-ro-rRO/spark_strings.xml
+++ b/packages/SystemUI/res/values-ro-rRO/spark_strings.xml
@@ -24,6 +24,7 @@
     <string name="statusbar_items_title">Elemente bară de stare</string>
     <!-- Name of the VPN status bar icon. -->
     <string name="status_bar_vpn">VPN</string>
+    <string name="status_bar_firewall">Firewall</string>
     <!-- Sb Data Saver icon -->
     <string name="status_bar_data_saver">Economisire date</string>
     <!-- Sb Call Strength icon -->
@@ -202,7 +203,7 @@
     <string name="screenrecord_longer_timeout_switch_summary">Limitează dimensiunea înregistrării la 15 GB</string>
     <string name="screenrecord_skip_time_label">Omite cronometrul</string>
     <string name="screenrecord_skip_time_summary">Elimină cele 3 secunde de așteptare</string>
-    <string name="screenrecord_hevc_switch_label">Enable HEVC</string>
+    <string name="screenrecord_hevc_switch_label">Activare HEVC</string>
     <!-- QS InternetDialog: Summary for how many devices are connected to the hotspot -->
     <plurals name="quick_settings_internet_hotspot_summary_num_devices">
         <item quantity="one">%d dispozitiv conectat</item>
@@ -210,27 +211,41 @@
         <item quantity="other">%d dispozitive conectate</item>
     </plurals>
     <!-- Data usage panel -->
-    <string name="total_internet_usage">Total internet usage (Since boot)</string>
-    <string name="cellular_usage">Mobile data usage</string>
-    <string name="wifi_usage">Wifi data usage</string>
+    <string name="total_internet_usage">Utilizare totală a internetului (De la pornire)</string>
+    <string name="cellular_usage">Utilizarea datelor mobile</string>
+    <string name="wifi_usage">Utilizarea datelor Wi-Fi</string>
     <!-- Screen pinning dialog description. (for devices without navbar) -->
-    <string name="screen_pinning_description_no_navbar">This keeps it in view until you unpin. Touch &amp; hold Back to unpin.</string>
+    <string name="screen_pinning_description_no_navbar">Ecranul este afișat până anulați fixarea. Atingeți lung opțiunea Înapoi pentru a anula fixarea.</string>
     <!-- Notify use that they are in Lock-to-app (for devices without navbar)-->
-    <string name="screen_pinning_toast_no_navbar">To unpin this screen, touch &amp; hold Back button</string>
+    <string name="screen_pinning_toast_no_navbar">Pentru a anula fixarea acestui ecran, atingeți și țineți apăsat butonul Înapoi</string>
     <!-- Screen pinning dialog description. (for devices without navbar and with gestures on fingerprint sensor) -->
-    <string name="screen_pinning_description_no_navbar_fpsensor">This keeps it in view until you unpin. Touch &amp; hold fingerprint sensor to unpin.</string>
+    <string name="screen_pinning_description_no_navbar_fpsensor">Ecranul este afișat până anulați fixarea. Atingeți lung senzorul de amprentă pentru a anula fixarea.</string>
     <!-- Notify use that they are in Lock-to-app (for devices without navbar and with gestures on fingerprint sensor)-->
-    <string name="screen_pinning_toast_no_navbar_fpsensor">To unpin this screen, touch &amp; hold fingerprint sensor</string>
+    <string name="screen_pinning_toast_no_navbar_fpsensor">Pentru a anula fixarea acestui ecran, atingeți și țineți apăsat senzorul de amprentă</string>
     <!-- Face Unlock -->
-    <string name="face_unlock_recognizing">Recognizing face...</string>
+    <string name="face_unlock_recognizing">Se recunoaște fața...</string>
     <!-- Bluetooth dialog -->
-    <string name="turn_on_bluetooth">Use Bluetooth</string>
-    <string name="bluetooth_is_off">Bluetooth is off</string>
-    <string name="tap_a_device_to_connect">Tap a device to connect</string>
-    <string name="photos_not_allowed">This app isnt supported</string>
+    <string name="turn_on_bluetooth">Utilizare Bluetooth</string>
+    <string name="bluetooth_is_off">Bluetooth este oprit</string>
+    <string name="tap_a_device_to_connect">Atinge un dispozitiv pentru conectare</string>
+    <string name="photos_not_allowed">Această aplicație nu este acceptată</string>
     <!-- Preferred network tile -->
-    <string name="quick_settings_preferred_network_label">Preferred network</string>
-    <string name="quick_settings_preferred_network_lte">4g / LTE</string>
-    <string name="quick_settings_preferred_network_nr">5g / NR</string>
-    <string name="quick_settings_preferred_network_unsupported">Unsupported</string>
+    <string name="quick_settings_preferred_network_label">Rețeaua preferată</string>
+    <string name="quick_settings_preferred_network_lte">4G / LTE</string>
+    <string name="quick_settings_preferred_network_nr">5G / NR</string>
+    <string name="quick_settings_preferred_network_unsupported">Neacceptat</string>
+    <!-- Screenshot Tile -->
+    <string name="screenshot_long_press">Long press - selected region</string>
+    <!-- Spark QS Tiles -->
+    <string name="quick_settings_spark_boost_mode_label">System Boost</string>
+    <string name="quick_settings_spark_services_unavailable">System Manager Disabled</string>
+    <string name="quick_settings_spark_boost_mode_enabled">Boost Active</string>
+    <string name="quick_settings_spark_boost_mode_disabled">Boost Inactive</string>
+    <string name="quick_settings_spark_idle_mode_label">Aggressive Idle Manager</string>
+    <string name="quick_settings_spark_idle_mode_enabled">Agrressive Idle Active</string>
+    <string name="quick_settings_spark_idle_mode_disabled">Agrressive Idle Inactive</string>
+    <!-- Data usage info in QS footer -->
+    <string name="usage_data">used today</string>
+    <string name="usage_data_default_suffix">Data</string>
+    <string name="usage_wifi_default_suffix">Wi-Fi</string>
 </resources>
